Replace String.isBlank usage for Java 8 compatibility